Fix sponsor image cropping on checkout page

--- a/src/assets/styles/pages/_checkout.scss
+++ b/src/assets/styles/pages/_checkout.scss
@@ -365,7 +365,7 @@
     display: flex;
     flex: 1 1 auto;
     flex-direction: row;
-    height: 100%;
+    height: 100px;
     justify-content: center;
     margin: 10px 5px 10px 0;
     max-height: 80px;
